# Raster2SVG-Demo

./: .env.example  .gitignore  README.developer.md  README.md  RELEASE_NOTES.md  docs.development.md  docs.installer.md  docs.settings-mapping.md  environment.yml  pyproject.toml  start-dev.bat  start-dev.ps1  start-dev.sh  start-service.bat  start-service.ps1  stop-dev.ps1  任务书.txt
architecture-summary/: 01-system-architecture.md  02-conversion-workflow.md  03-runtime-and-interfaces.md  04-state-artifacts-and-config.md  05-deployment-and-release.md  06-maintenance-and-evolution.md  README.md
desktop/: README.desktop.md  bootstrap.ps1  bootstrap.sh  main.js  package-lock.json  package.json  preload.js  start-desktop.bat  start-desktop.ps1  start-desktop.sh
packaging/: README.packaging.md  analyze-package-deps.ps1  build-backend-macos.sh  build-backend.ps1  build-desktop-macos.sh  build-desktop.ps1  build-release-macos.sh  build-release-windows.ps1  build-windows-installer.ps1  generate-icon.py  prepare-package-venv.ps1  prepare-package-venv.sh  set-version.ps1  set-version.sh  validate-version.ps1  validate-version.sh
quick-start/: README.md  README.quick-start.md  bootstrap.ps1  bootstrap.sh  package.bat  package.ps1  package.sh  start-api.bat  start-api.ps1  start-api.sh
src/deepagents_template/: __init__.py  agent.py  api.py  artifact_leases.py  artifacts.py  atomic_files.py  bbox_overflow.py  bbox_sanitization.py  bbox_validation.py  bounded_executor.py  checklist.py  config.py  conversion.py  desktop_server.py  error_reporting.py  geometry.py  main.py  memory.py  (+17 more)
tests/: test_svg_rendering.py
(+71 files in other folders)
